# Cargo-Gui

./: Cargo.toml  README.md
src/: config.rs  icons.rs  main.rs
