[package]
name = "cargo-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-gui"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
iced_fonts = { version = "0.2", features = ["bootstrap"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
